# tencent_scf_rust

./: LICENSE.txt  README.md
first_way/: Cargo.toml  build.sh
first_way/src/: config.rs  main.rs
second_way/: Cargo.toml  build.sh
second_way/pkg/: bootstrap
second_way/src/: main.rs
