[package]
name = "tencent"
version = "0.1.0"
edition = "2021"
authors = ["HoZanHoi <kevinho0706@gmail.com>"]
license = "MIT"
keywords = ["tencent_scf", "serverless", "tencent"]
description = "Example of Tencent Serverless Cloud Function"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.1.0", features = ["json"]}
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
once_cell = "1.9.0"

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1